<resources>
    <string name="app_name">LoginApp</string>
    <string name="acceder">Acceder</string>
    <string name="guardar">Guardar</string>
    <string name="usuario">Usuario:</string>
    <string name="clave">Clave:</string>
    <string name="usuarioHolder">Usuario</string>
    <string name="claveHolder">Clave</string>
    <string name="bienvenida">Bienvenido...</string>
    <string name="borrar">Borrar</string>
    <string name="volver">Volver</string>
    <string name="aviso">AVISO</string>
</resources>